# keyple-service-cpp-lib

./: .cppcheck.suppress  CMakeLists.txt  NOTICE.md  PUBLISHERS.yml  README.md  index.md  list_versions.md
.github/workflows/: build-and-test.yml  publish-doc-release.yml  publish-doc-snapshot.yml
2.1.1/: _local_reader_adapter_8h_source.html
2.1.1-SNAPSHOT/: _abstract_monitoring_job_adapter_8cpp.html  _abstract_monitoring_job_adapter_8cpp__incl.map  _abstract_monitoring_job_adapter_8cpp__incl.md5  _abstract_monitoring_job_adapter_8cpp_source.html  _abstract_monitoring_job_adapter_8h.html  _abstract_monitoring_job_adapter_8h__incl.map  _abstract_monitoring_job_adapter_8h__incl.md5  _abstract_monitoring_job_adapter_8h_source.html  _abstract_observable_local_plugin_adapter_8cpp.html  _abstract_observable_local_plugin_adapter_8cpp__incl.map  _abstract_observable_local_plugin_adapter_8cpp__incl.md5  _abstract_observable_local_plugin_adapter_8cpp_source.html  _abstract_observable_local_plugin_adapter_8h.html  _abstract_observable_local_plugin_adapter_8h__incl.map  _abstract_observable_local_plugin_adapter_8h__incl.md5  _abstract_observable_local_plugin_adapter_8h_source.html  _abstract_observable_state_adapter_8cpp.html  _abstract_observable_state_adapter_8cpp__incl.map  _abstract_observable_state_adapter_8cpp__incl.md5  _abstract_observable_state_adapter_8cpp_source.html  _abstract_observable_state_adapter_8h.html  _abstract_observable_state_adapter_8h__incl.map  _abstract_observable_state_adapter_8h__incl.md5  _abstract_observable_state_adapter_8h_source.html  _abstract_plugin_adapter_8cpp.html  _abstract_plugin_adapter_8cpp__incl.map  _abstract_plugin_adapter_8cpp__incl.md5  _abstract_plugin_adapter_8cpp_source.html  _abstract_plugin_adapter_8h.html  _abstract_plugin_adapter_8h__incl.map  _abstract_plugin_adapter_8h__incl.md5  _abstract_plugin_adapter_8h_source.html  _abstract_reader_adapter_8cpp.html  _abstract_reader_adapter_8cpp_source.html  _abstract_reader_adapter_8h.html  _abstract_reader_adapter_8h_source.html  _apdu_request_adapter_8cpp.html  _apdu_request_adapter_8cpp_source.html  _apdu_request_adapter_8h.html  _apdu_request_adapter_8h_source.html  (+402 more)
2.1.1-SNAPSHOT/search/: all_11.js  all_6.js  functions_10.js
include/keyple/core/service/: AbstractMonitoringJobAdapter.hpp  AbstractObservableLocalPluginAdapter.hpp  AbstractPluginAdapter.hpp  (+47 more)
src/: CMakeLists.txt
src/main/: AbstractMonitoringJobAdapter.cpp  AbstractMonitoringJobAdapter.h  AbstractObservableLocalPluginAdapter.cpp  AbstractObservableLocalPluginAdapter.h  AbstractObservableStateAdapter.cpp  AbstractObservableStateAdapter.h  AbstractPluginAdapter.cpp  AbstractPluginAdapter.h  AbstractReaderAdapter.cpp  AbstractReaderAdapter.h  ApduRequestAdapter.cpp  ApduRequestAdapter.h  ApduResponseAdapter.cpp  ApduResponseAdapter.h  AutonomousObservableLocalPluginAdapter.cpp  AutonomousObservableLocalPluginAdapter.h  BasicCardSelectorAdapter.cpp  CMakeLists.txt  CMakeLists.txt.keyple-common  CMakeLists.txt.keyple-plugin  CMakeLists.txt.keyple-util  CMakeLists.txt.keypop-card  CMakeLists.txt.keypop-reader  CardInsertionActiveMonitoringJobAdapter.cpp  CardInsertionActiveMonitoringJobAdapter.h  CardInsertionPassiveMonitoringJobAdapter.cpp  CardInsertionPassiveMonitoringJobAdapter.h  CardRemovalActiveMonitoringJobAdapter.cpp  CardRemovalActiveMonitoringJobAdapter.h  CardRemovalPassiveMonitoringJobAdapter.cpp  CardRemovalPassiveMonitoringJobAdapter.h  CardResponseAdapter.cpp  CardResponseAdapter.h  CardSelectionManagerAdapter.cpp  CardSelectionManagerAdapter.h  CardSelectionResponseAdapter.cpp  CardSelectionResponseAdapter.h  CardSelectionResultAdapter.cpp  CardSelectionResultAdapter.h  CardSelectionScenarioAdapter.cpp  (+54 more)
src/main/cpp/: ExecutorService.cpp  ExecutorService.h  Job.cpp  Job.h
src/main/spi/: PluginObservationExceptionHandlerSpi.h  PluginObserverSpi.h
src/test/: AbstractReaderAdapterTest.cpp  ApduResponseAdapterTest.cpp  AutonomousObservableLocalPluginAdapterTest.cpp  BasicCardSelectorAdapterTest.cpp  CMakeLists.txt  CMakeLists.txt.googletest  CardSelectionManagerAdapterTest.cpp  CardSelectionResultAdapterTest.cpp  IsoCardSelectorAdapterTest.cpp  LocalPluginAdapterTest.cpp  LocalPoolPluginAdapterTest.cpp  LocalReaderAdapterTest.cpp  MainTest.cpp  ObservableLocalPluginAdapterTest.cpp  ObservableLocalReaderAsynchronousAdapterTest.cpp  ObservableLocalReaderAutonomousAdapterTest.cpp  ObservableLocalReaderBlockingAdapterTest.cpp  ObservableLocalReaderNonBlockingAdapterTest.cpp  ObservableLocalReaderSelectionScenarioTest.cpp  ReaderApiFactoryAdapterTest.cpp  SmartCardServiceAdapterTest.cpp
src/test/mock/: AbstractReaderAdapterMock.h  AbstractReaderAdapterMock.hpp  ApduRequestSpiMock.h  ApduRequestSpiMock.hpp  ApduResponseApiMock.h  ApduResponseApiMock.hpp  AutonomousObservablePluginSpiMock.h  AutonomousObservablePluginSpiMock.hpp  CardExtensionMock.h  CardExtensionMock.hpp  CardReaderMock.h  CardReaderMock.hpp  CardReaderObservationExceptionHandlerSpiMock.h  CardReaderObservationExceptionHandlerSpiMock.hpp  CardRequestSpiMock.h  CardRequestSpiMock.hpp  CardResponseApiMock.h  CardResponseApiMock.hpp  CardSelectionRequestSpiMock.h  CardSelectionRequestSpiMock.hpp  CardSelectionResponseApiMock.h  CardSelectionResponseApiMock.hpp  CardSelectorSpiMock.h  ConfigurableReaderSpiMock.h  ConfigurableReaderSpiMock.hpp  ControllableReaderSpiMock.h  ControllableReaderSpiMock.hpp  ObservableControllableReaderSpiMock.h  ObservableControllableReaderSpiMock.hpp  ObservableLocalPluginSpiMock.h  ObservableLocalPluginSpiMock.hpp  ObservableLocalReaderAdapterMock.h  ObservableLocalReaderAdapterMock.hpp  ObservablePluginSpiMock.h  ObservablePluginSpiMock.hpp  ObservableReaderAsynchronousSpiMock.hpp  ObservableReaderAutonomousSpiMock.h  ObservableReaderBlockingSpiMock.h  ObservableReaderBlockingSpiMock.hpp  ObservableReaderNonBlockingSpiMock.h  (+25 more)
src/test/util/: ObservableLocalReaderSuite.h  ObservableLocalReaderSuite.hpp  ReaderAdapterTestUtils.cpp  ReaderAdapterTestUtils.h  ReaderAdapterTestUtils.hpp
toolchain/: clang-macos.cmake
(+4 files in other folders)
